src/templates/assets/stylesheets/main/components/_top.scss
////
/// Copyright (c) 2016-2025 Martin Donath <martin.donath@squidfunk.com>
///
/// Permission is hereby granted, free of charge, to any person obtaining a
/// copy of this software and associated documentation files (the "Software"),
/// to deal in the Software without restriction, including without limitation
/// the rights to use, copy, modify, merge, publish, distribute, sublicense,
/// and/or sell copies of the Software, and to permit persons to whom the
/// Software is furnished to do so, subject to the following conditions:
///
/// The above copyright notice and this permission notice shall be included in
/// all copies or substantial portions of the Software.
///
/// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
/// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
/// FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL
/// THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
/// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
/// FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
/// DEALINGS
////

// ----------------------------------------------------------------------------
// Rules
// ----------------------------------------------------------------------------

// Back-to-top container
.md-top {
  position: fixed;
  bottom: px2rem(54px);
  z-index: 2;
  display: flex;
  justify-content: center;
  margin-inline-start: 50%;
  transform: translate(-50%, 0);
  transition:
    transform 125ms cubic-bezier(0.4, 0, 0.2, 1),
    opacity   125ms;

  // Add spacing between buttons for browsers that don't support gap
  &__button:not(:last-child) {
    margin-inline-end: px2rem(30px);
  }

  // [print]: Hide back-to-top button
  @media print {
    display: none;
  }

  // Adjust for right-to-left languages
  [dir="rtl"] & {
    transform: translate(50%, 0);
  }

  // Back-to-top button is hidden
  &[hidden] {
    pointer-events: none;
    opacity: 0;
    transition-duration: 0ms;
    transform: translate(-50%, px2rem(4px));

    // Adjust for right-to-left languages
    [dir="rtl"] & {
      transform: translate(50%, px2rem(4px));
    }
  }

  // Individual buttons
  &__button {
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    padding: px2rem(8px);
    font-size: px2rem(14px);
    color: var(--md-default-fg-color);
    background-color: var(--md-default-fg-color--lightest);
    backdrop-filter: blur(px2rem(8px));
    border-radius: px2rem(8px);
    outline: none;
    box-shadow: var(--md-shadow-z2);
    transition:
      color            125ms,
      background-color 125ms;

    // Main back-to-top button (with text)
    &--main {
      width: auto;
      max-width: calc(100vw - px2rem(180px)); // Dynamic width: 100vw - (2 * side_btn + 2 * gap + margins)
      padding: px2rem(8px) px2rem(16px) px2rem(8px) px2rem(12px);

      // Add spacing between icon and text for browsers that don't support gap
      svg {
        margin-inline-end: px2rem(8px);
      }

      // Text container
      span {
        display: inline-block;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
    }

    // Button on focus/hover
    &:is(:focus, :hover) {
      color: var(--md-accent-bg-color);
      background-color: var(--md-accent-fg-color);
    }

    // Inline icon
    svg {
      display: inline-block;
      width: px2rem(18px);
      height: px2rem(18px);
      vertical-align: -0.5em;
      fill: currentcolor;
      flex-shrink: 0;

      // Override for Lucide icons, which use strokes
      &.lucide {
        fill: transparent;
        stroke: currentcolor;
      }
    }

    // Hide Nav button on desktop
    &[for="__drawer"] {
      @include break-from-device(screen) {
        display: none;
      }
    }

    // Hide TOC button when TOC is visible as sidebar
    &[for="__toc"] {
      @include break-from-device(tablet landscape) {
        display: none;
      }
    }
  }
}

